--- a/task7.html
+++ b/task7.html
@@ -9,11 +9,11 @@
         <link rel="stylesheet" href="task7.css">
     </head>
     <body>
-        <input id = "form" type="text">
-        <div>
+        <input id = "form" type="text" style = "margin: 5px;">
+        <div style = "margin-left: 5px">
             <button id = "sqrButton">Квадрат</button>
-            <button id = "crlButton">Круг</button>
             <button id = "trgButton">Треугольник</button>
+            <button id = "crlButton">Круг</button>
         </div>
         
         <div id = "db" class = "draw-box"></div>
